added answer to "best two regressor model" (3)

--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -110,4 +110,6 @@ subsets(regsubsets.out,statistic="adjr2",legend="bottomright",main="Adjusted R^2
 
 ### Best Two regressor model
 
+The best regressor model is the one featuring Length 3 and Weight as its two regressors. The following best is the model showing just weight as its regressor variable. 
+
 ## Final Summary Statements
